objects/Service_Order_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Clock_In_User_Ids__c</fullName>
        <label>Clock In User Ids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Clocked_Hours__c</fullName>
        <label>Diagnostic Clocked Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EVL_Solution_Marked_Most_Likely__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EVL Solution Marked Most Likely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_ABRFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABRFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Open_Timesheets_Rollup_Count__c</fullName>
        <label>FSL Open Timesheets Rollup Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultCodeId__c</fullName>
        <label>FaultCodeId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobPlan_Clocked_Hours__c</fullName>
        <label>JobPlan Clocked Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Triage &amp; Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Job Plan</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Warranty Claims</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recent Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Clocked_Hours__c</fullName>
        <label>Repair Clocked Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeat_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repeat_or_Recent_Visit__c</fullName>
        <formula>IF( ($Profile.Name = &apos;EVL_Dealer_Advanced&apos; || $Profile.Name = &apos;EVL_Dealer_Technician&apos;),IF(Repeat_Visit__c = true, IMAGE(&quot;/evolution/servlet/servlet.FileDownload?file=0154N000002juNO&quot;,&quot;&quot;), IF(Recent_Visit__c = true, IMAGE(&quot;/evolution/servlet/servlet.FileDownload?file=0154N000002juNT&quot;,&quot;&quot;), &quot;&quot;)),IF(Repeat_Visit__c = true, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154N000002juNO&quot;,&quot;&quot;), IF(Recent_Visit__c = true, IMAGE(&quot;/servlet/servlet.FileDownload?file=0154N000002juNT&quot;,&quot;&quot;), &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repeat or Recent Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedSolution__c</fullName>
        <label>SelectedSolution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Order_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Id</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Order Extension</relationshipLabel>
        <relationshipName>Service_Order_Extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Clocked_Hours__c</fullName>
        <label>Total Clocked Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Clocked_Hrs__c</fullName>
        <label>Travel Clocked Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>so_type__c</fullName>
        <label>so type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Order Extension</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Order Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Extension</pluralLabel>
    <recordTypes>
        <fullName>SolutionRepair</fullName>
        <active>true</active>
        <label>SolutionRepair</label>
    </recordTypes>
    <recordTypes>
        <fullName>SolutionT_D</fullName>
        <active>true</active>
        <label>SolutionT&amp;D</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>